--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 	"description": "",
 	"main": "src/index.js",
 	"scripts": {
-		"start": "node src/index.ts"
+		"start": "node src/index.js"
 	},
-	"keywords": [],
+    "type": "module",
+    "keywords": [],
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
